<resources>
    <string name="app_name">Bing Tools</string>
    <string name="settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="Result">0.00</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mul">x</string>
    <string name="div">/</string>
    <string name="clear">c</string>

    <string name="refresh">Refresh</string>
    <string name="error">Error</string>
    <string name="error2">Undefined</string>
    <string name="error3">Too large </string>
    <string name="ether">Press to see price!</string>
    <string name="bing_dining">Bing Dining</string>
    <string name="calculator">Calculator</string>
    <string name="crypto">Crypto</string>
    <string name="about">About</string>
    <string name="auto_launch">Auto Launch</string>
    <string name="hinman">Hinman</string>
    <string name="c4">C4</string>
    <string name="ciw">CIW</string>
    <string name="appalachian">Appalachian</string>


    <string name="cardMenuColor">Change card menu color</string>
    <string name="autoPosition">Auto position on card expand</string>
    <string name="resetSettings">Reset Settings</string>
    <string name="homeSettings">Home</string>

    <string name="appalachianUrl">https://menus.sodexomyway.com/BiteMenu/Menu?menuId=1202&amp;locationId=74015009&amp;whereami=https://binghamton.sodexomyway.com/dining-near-me/appalachian-collegiate-center</string>
    <string name="c4Url">https://menus.sodexomyway.com/BiteMenu/Menu?menuId=1204&amp;locationId=74015006&amp;whereami=https://binghamton.sodexomyway.com/dining-near-me/chenango-champlain-collegiate-center</string>
    <string name="ciwUrl">https://menus.sodexomyway.com/BiteMenu/Menu?menuId=1203&amp;locationId=74015005&amp;whereami=https://binghamton.sodexomyway.com/dining-near-me/woods-dinig-center</string>
    <string name="hinmanUrl">https://menus.sodexomyway.com/BiteMenu/Menu?menuId=1205&amp;locationId=74015007&amp;whereami=https://binghamton.sodexomyway.com/dining-near-me/hinman-dining-center</string>

    <string name="easternTimeZone">America/New_York</string>
    <string name="customColor">Custom Color</string>


</resources>
